08.ingresses-and-ingress-controller/01.kubernetes-organization-the-ingress-nginx/02.Practice/2.2.based-host-routing-the-http/2.2.2.jmsco-project/2.2.2.1.dev/ing_app001.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dev-jmsco
  name: app001
  labels:
    ing: app001
  annotations:
    # <== 当kubernetes版本小于1.19时,
    #     可用此方法和spec.ingressClassName两种方法来指定ingressclass资源对象
    #kubernetes.io/ingress.class: "jmsco-nginx"
spec:
  # <== 当kubernetes版本大于等于1.19时，只能用
  #     此方法来指定某ingress-controller配套ingressclass资源对象
  ingressClassName: jmsco-nginx 

  # <== 配置规则及启下
  rules:
  - host: "dev-app001.qepyd.com"
    http:
      paths:
      - path: "/"
        pathType: "Prefix"
        backend:
          service: 
            name: "app001"
            port: 
              number: 80
